# flipper-codex-monitor

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md
backend/src/: codex_app_server.rs  codex_limits.rs  flipper_manager.rs  lib.rs  main.rs
flipper-app/: README.md  application.fam  codex_monitor.c  codex_monitor.h
flipper-app/helpers/: ble_serial.c  ble_serial.h
flipper-app/views/: bars_view.c  bars_view.h  connect_view.c  connect_view.h  status_view.c  status_view.h
