[package]
name = "flipper-codex-monitor-backend"
version = "0.1.0"
edition = "2021"
description = "BLE backend for displaying Codex account limits on a Flipper Zero"
license = "MIT"
repository = "https://github.com/vk0st/flipper-codex-monitor"

[dependencies]
bincode = "1.3.3"
btleplug = "0.10.5"
chrono = "0.4.42"
futures = "0.3.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.28.2", features = ["full"] }
uuid = "1.4.0"
